v0.11/15/15.4.tf
resource "aws_instance" "example_for_operation" {
  ami                  = "ami-0f9ae750e8274075b"
  instance_type        = "t3.micro"
  iam_instance_profile = "${aws_iam_instance_profile.ec2_for_ssm.name}"
  subnet_id            = "${aws_subnet.private_0.id}"
  user_data            = "${file("./user_data.sh")}"
}

output "operation_instance_id" {
  value = "${aws_instance.example_for_operation.id}"
}
